src/static/css/main.css
/* Primary site definitions */

/* Font-face definitions */
@font-face {
	font-family: "Karla";
	src:
		url("/static/fonts/Karla.woff2") format("woff2"),
		url("/static/fonts/Karla.ttf") format("ttf");
}

@font-face {
	font-family: "Playfair Display";
	src:
		url("/static/fonts/PlayfairDisplay.woff2") format("woff2"),
		url("/static/fonts/PlayfairDisplay.ttf") format("ttf");
}

:root {
	/* 3 colour palette here https://coolors.co/111111-f5f5f5-f2be41*/
	--primary-background-color: #fafafa;
	/* --primary-background-color: rgb(248, 236, 214); */
	--secondary-background-color: hsl(42, 87%, 90%);
	--darker-background-color: #f0f0f0;
	--text-color: #111;
	--light-text-color: #666;
	--kcles-yellow: #f2be41;
}

html {
	font-family:
		"Karla",
		system-ui,
		-apple-system,
		BlinkMacSystemFont,
		"Segoe UI",
		Roboto,
		Oxygen,
		Ubuntu,
		Cantarell,
		"Open Sans",
		"Helvetica Neue",
		sans-serif;
	font-size: 21px;
	background-color: var(--primary-background-color);
	color: var(--text-color);
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Playfair Display", Georgia, "Times New Roman", Times, serif;
}

a {
	text-decoration: underline;
	color: var(--text-color);
}

a:hover {
	transition: 0.175s;
	color: var(--kcles-yellow);
	opacity: 0.8;
}
a:active {
	color: var(--kcles-yellow);
}
a:hover > svg {
	transition: 0.175s;
	opacity: 0.5;
}

main {
	/* width: 80%; */
	line-height: 1.5;
	margin: 0 auto;
}

/* .home {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	gap: 2.5rem;
} */

.home-content {
	width: 85%;
	margin: 0 auto;
	display: flex;
	justify-content: center;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 5rem;
}

.home-content > div {
	display: inline-flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-between;
	height: fit-content;
	gap: 1.5rem;
}

.home-content section {
	width: 45%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 0;
	align-items: center;
	align-content: center;
}

.home-content img {
	max-height: 15em;
	width: auto;
	object-fit: contain;
}

.left-img {
	justify-content: center;
}

.right-img {
	justify-content: center;
}

.section-separator {
	height: 10vh;
}

.eventItem {
	margin: 1em 0;
	font-size: 1rem;
}

.socials {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	gap: 1.5rem;
}

.icon-button {
	display: block;
	max-width: fit-content;
}

